SERVER-53964 Handle time-series bucket removal